// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`generateInterface returns interface for schema: %s 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {};
      getUsers: {};
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface returns interface for schema: %s 2`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: Array<DevupObject<'response', 'openapi.json'>['User']>;
      };
      getUsers: {
        response: Array<DevupObject<'response', 'openapi.json'>['User']>;
      };
    }
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
      createUser: {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
        name?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles nullable properties (OpenAPI 3.0 style) 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  type ResponseStatus = "active" | "inactive"

  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {
          name?: string | null;
          age?: number | null;
          active?: boolean | null;
          tags?: Array<string> | null;
          metadata?: {
            key?: string;
          } | null;
          status?: ResponseStatus | null;
        };
      };
      getUsers: {
        response?: {
          name?: string | null;
          age?: number | null;
          active?: boolean | null;
          tags?: Array<string> | null;
          metadata?: {
            key?: string;
          } | null;
          status?: ResponseStatus | null;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles nullable properties (OpenAPI 3.1 style) 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {
          name?: string | null;
          age?: number | null;
          active?: boolean | null;
        };
      };
      getUsers: {
        response?: {
          name?: string | null;
          age?: number | null;
          active?: boolean | null;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles nullable in component schemas 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
      getUsers: {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
        nickname?: string | null;
        bio?: string | null;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles all HTTP methods 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
      getUsers: {
        response?: {};
      };
    }
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
      createUser: {
        response?: {};
      };
    }
  }

  interface DevupPutApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
      updateUser: {
        response?: {};
      };
    }
  }

  interface DevupDeleteApiStruct {
    'openapi.json': {
      '/users': {};
      deleteUser: {};
    }
  }

  interface DevupPatchApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
      patchUser: {
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles path parameters 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users/{userId}': {
        params: {
          userId: string;
        };
        response?: {};
      };
      getUser: {
        params: {
          userId: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles query parameters 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        query: {
          page?: number;
          limit: number;
        };
        response?: {};
      };
      getUsers: {
        query: {
          page?: number;
          limit: number;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles path and query parameters together 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users/{userId}/posts': {
        params: {
          userId: string;
        };
        query?: {
          page?: number;
        };
        response?: {};
      };
      getUserPosts: {
        params: {
          userId: string;
        };
        query?: {
          page?: number;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles request body 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body?: {
          name?: string;
          email?: string;
        };
        response?: {};
      };
      createUser: {
        body?: {
          name?: string;
          email?: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles request body with $ref 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body: DevupObject<'request', 'openapi.json'>['User'];
        response?: {};
      };
      createUser: {
        body: DevupObject<'request', 'openapi.json'>['User'];
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      User: {
        name?: string;
        email?: string;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles 200 response 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: Array<DevupObject<'response', 'openapi.json'>['User']>;
      };
      getUsers: {
        response: Array<DevupObject<'response', 'openapi.json'>['User']>;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
        name?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles 201 response 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
      createUser: {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
        name?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles response with other status codes 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {
          message?: string;
        };
      };
      getUsers: {
        response?: {
          message?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles error responses 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
        error?: {
          error?: string;
        };
      };
      getUsers: {
        response?: {};
        error?: {
          error?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {
    'openapi.json': {
      Error: {
      code?: string;
      message?: string;
    };
    }
  }
}"
`;

exports[`generateInterface handles default error response 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
        error?: {
          error?: string;
        };
      };
      getUsers: {
        response?: {};
        error?: {
          error?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles component schemas for request 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body: DevupObject<'request', 'openapi.json'>['CreateUserRequest'];
        response?: {};
      };
      createUser: {
        body: DevupObject<'request', 'openapi.json'>['CreateUserRequest'];
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      CreateUserRequest: {
        name?: string;
        email?: string;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles component schemas for response 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
      getUsers: {
        response: DevupObject<'response', 'openapi.json'>['User'];
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
        name?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles component schemas for error 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
        error: DevupObject<'error', 'openapi.json'>['Error'];
      };
      getUsers: {
        response?: {};
        error: DevupObject<'error', 'openapi.json'>['Error'];
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {
    'openapi.json': {
      Error: {
      code?: string;
      message?: string;
    };
    }
  }
}"
`;

exports[`generateInterface handles array response with component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: Array<DevupObject<'response', 'openapi.json'>['User']>;
      };
      getUsers: {
        response: Array<DevupObject<'response', 'openapi.json'>['User']>;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
        name?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface creates both operationId and path keys 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users/{userId}': {
        params: {
          userId: string;
        };
        response?: {};
      };
      getUserById: {
        params: {
          userId: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles endpoints without operationId 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles requestDefaultNonNullable option 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body?: {
          name?: string;
          email?: string;
        };
        response?: {};
      };
      createUser: {
        body?: {
          name?: string;
          email?: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles requestDefaultNonNullable option 2`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body?: {
          name?: string;
          email?: string;
        };
        response?: {};
      };
      createUser: {
        body?: {
          name?: string;
          email?: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles responseDefaultNonNullable option 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: {
          id: string;
          name?: string;
        };
      };
      getUsers: {
        response: {
          id: string;
          name?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles responseDefaultNonNullable option 2`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {
          id?: string;
          name?: string;
        };
      };
      getUsers: {
        response?: {
          id?: string;
          name?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles nested schemas in allOf 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: DevupObject<'response', 'openapi.json'>['Base'] & {
  extra?: string;
};
      };
      getUsers: {
        response: DevupObject<'response', 'openapi.json'>['Base'] & {
  extra?: string;
};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      Base: {
        id?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles empty paths 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles pathItem parameters 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users/{userId}': {
        params: {
          userId: string;
        };
        response?: {};
      };
      getUser: {
        params: {
          userId: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles requestBody $ref 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body?: {
          name?: string;
        };
        response?: {};
      };
      createUser: {
        body?: {
          name?: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles response $ref 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {};
      getUsers: {};
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles complex scenario with all features 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users/{userId}/posts/{postId}': {
        params: {
          userId: string;
          postId: string;
        };
        query?: {
          include?: string;
        };
        response: DevupObject<'response', 'openapi.json'>['Post'];
        error: DevupObject<'error', 'openapi.json'>['Error'];
      };
      getUserPost: {
        params: {
          userId: string;
          postId: string;
        };
        query?: {
          include?: string;
        };
        response: DevupObject<'response', 'openapi.json'>['Post'];
        error: DevupObject<'error', 'openapi.json'>['Error'];
      };
    }
  }

  interface DevupPutApiStruct {
    'openapi.json': {
      '/users/{userId}/posts/{postId}': {
        params: {
          userId: string;
        };
        body: DevupObject<'request', 'openapi.json'>['UpdatePostRequest'];
        response: DevupObject<'response', 'openapi.json'>['Post'];
      };
      updateUserPost: {
        params: {
          userId: string;
        };
        body: DevupObject<'request', 'openapi.json'>['UpdatePostRequest'];
        response: DevupObject<'response', 'openapi.json'>['Post'];
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      UpdatePostRequest: {
        title?: string;
        content?: string;
      };
    }
  }

  interface DevupResponseComponentStruct {
    'openapi.json': {
      Post: {
        id?: string;
        title?: string;
        content?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {
    'openapi.json': {
      Error: {
      code?: string;
      message?: string;
    };
    }
  }
}"
`;

exports[`generateInterface handles anyOf in schema collection 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: (DevupObject<'response', 'openapi.json'>['User'] | DevupObject<'response', 'openapi.json'>['Admin']);
      };
      getUsers: {
        response: (DevupObject<'response', 'openapi.json'>['User'] | DevupObject<'response', 'openapi.json'>['Admin']);
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
      };
      Admin: {
        id?: string;
        role?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles oneOf in schema collection 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: (DevupObject<'response', 'openapi.json'>['User'] | DevupObject<'response', 'openapi.json'>['Guest']);
      };
      getUsers: {
        response: (DevupObject<'response', 'openapi.json'>['User'] | DevupObject<'response', 'openapi.json'>['Guest']);
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      User: {
        id?: string;
      };
      Guest: {
        name?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles requestBody $ref that extracts schema name 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body: unknown;
        response?: {};
      };
      createUser: {
        body: unknown;
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      CreateUserRequest: {
        name?: string;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles response $ref that extracts schema name 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {};
      getUsers: {};
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      UserResponse: {
        id?: string;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles requestBody with $ref that is not a component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body: unknown;
        response?: {};
      };
      createUser: {
        body: unknown;
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles response with $ref that is not a component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: unknown;
      };
      getUsers: {
        response: unknown;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles error response with $ref that is not a component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
        error: unknown;
      };
      getUsers: {
        response?: {};
        error: unknown;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles array response with $ref that is not a component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response: Array<unknown>;
      };
      getUsers: {
        response: Array<unknown>;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles error array response with $ref that is not a component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
        error: Array<unknown>;
      };
      getUsers: {
        response?: {};
        error: Array<unknown>;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles error array response with component schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
        error: Array<DevupObject<'error', 'openapi.json'>['Error']>;
      };
      getUsers: {
        response?: {};
        error: Array<DevupObject<'error', 'openapi.json'>['Error']>;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {
    'openapi.json': {
      Error: {
      code?: string;
      message?: string;
    };
    }
  }
}"
`;

exports[`generateInterface handles error response with $ref to response object 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
      getUsers: {
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles error response $ref that extracts schema name 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/users': {
        response?: {};
      };
      getUsers: {
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {
    'openapi.json': {
      ServerError: {
      error?: string;
    };
    }
  }
}"
`;

exports[`generateInterface handles inline response with nested $ref containing enums 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  type ItemStatus = "draft" | "published" | "archived"
  type OtherStatus = "pending" | "approved" | "rejected"

  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/items': {
        response?: {
          items?: Array<DevupObject<'response', 'openapi.json'>['ItemResponse']>;
          page?: number;
        };
      };
      listItems: {
        response?: {
          items?: Array<DevupObject<'response', 'openapi.json'>['ItemResponse']>;
          page?: number;
        };
      };
      '/other-items': {
        response?: {
          items?: Array<DevupObject<'response', 'openapi.json'>['OtherItemResponse']>;
          page?: number;
        };
      };
      listOtherItems: {
        response?: {
          items?: Array<DevupObject<'response', 'openapi.json'>['OtherItemResponse']>;
          page?: number;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      ItemResponse: {
        id?: number;
        status?: ItemStatus;
      };
      OtherItemResponse: {
        id?: number;
        status?: OtherStatus;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles circular references in schema collection 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/nodes': {
        response: Array<DevupObject<'response', 'openapi.json'>['TreeNode']>;
      };
      listNodes: {
        response: Array<DevupObject<'response', 'openapi.json'>['TreeNode']>;
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {
    'openapi.json': {
      TreeNode: {
        id?: number;
        name?: string;
        children?: Array<DevupObject<'response', 'openapi.json'>['TreeNode']>;
      };
    }
  }

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles request schema with inline enum 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  type CreateItemRequestPriority = "low" | "medium" | "high"

  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/items': {
        body: DevupObject<'request', 'openapi.json'>['CreateItemRequest'];
        response?: {};
      };
      createItem: {
        body: DevupObject<'request', 'openapi.json'>['CreateItemRequest'];
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      CreateItemRequest: {
        name?: string;
        priority?: CreateItemRequestPriority;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles error schema with inline enum 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  type ErrorResponseCode = "INVALID_INPUT" | "NOT_FOUND" | "UNAUTHORIZED"

  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupGetApiStruct {
    'openapi.json': {
      '/items': {
        response?: {};
        error: DevupObject<'error', 'openapi.json'>['ErrorResponse'];
      };
      getItems: {
        response?: {};
        error: DevupObject<'error', 'openapi.json'>['ErrorResponse'];
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {
    'openapi.json': {
      ErrorResponse: {
      message?: string;
      code?: ErrorResponseCode;
    };
    }
  }
}"
`;

exports[`generateInterface handles urlencoded request body with $ref 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/form': {
        body: DevupObject<'request', 'openapi.json'>['SubscribeRequest'];
        response?: {
          ok?: boolean;
        };
      };
      subscribe: {
        body: DevupObject<'request', 'openapi.json'>['SubscribeRequest'];
        response?: {
          ok?: boolean;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      SubscribeRequest: {
        name?: string;
        email?: string;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles urlencoded request body with inline schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/form/contact': {
        body?: {
          name?: string;
          email?: string;
          message?: string;
        };
        response?: {};
      };
      contact: {
        body?: {
          name?: string;
          email?: string;
          message?: string;
        };
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles typed multipart request body with $ref 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/typed-form': {
        body: DevupObject<'request', 'openapi.json'>['CreateFileUploadRequest'];
        response?: {
          id?: string;
        };
      };
      createFileUpload: {
        body: DevupObject<'request', 'openapi.json'>['CreateFileUploadRequest'];
        response?: {
          id?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      CreateFileUploadRequest: {
        name: string;
        document?: File | Blob;
        tags?: Array<string>;
        thumbnail?: File | Blob;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles raw multipart with empty object schema 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/form/upload': {
        body: FormData | Record<string, unknown>;
        response?: {
          url?: string;
        };
      };
      upload: {
        body: FormData | Record<string, unknown>;
        response?: {
          url?: string;
        };
      };
    }
  }

  interface DevupRequestComponentStruct {}

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface handles multipart PUT and PATCH endpoints 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPutApiStruct {
    'openapi.json': {
      '/typed-form/{id}': {
        params: {
          id: string;
        };
        body: DevupObject<'request', 'openapi.json'>['UpdateFileUploadRequest'];
        response?: {};
      };
      updateFileUpload: {
        params: {
          id: string;
        };
        body: DevupObject<'request', 'openapi.json'>['UpdateFileUploadRequest'];
        response?: {};
      };
    }
  }

  interface DevupPatchApiStruct {
    'openapi.json': {
      '/typed-form/{id}': {
        params: {
          id: string;
        };
        body: DevupObject<'request', 'openapi.json'>['PatchFileUploadRequest'];
        response?: {};
      };
      patchFileUpload: {
        params: {
          id: string;
        };
        body: DevupObject<'request', 'openapi.json'>['PatchFileUploadRequest'];
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      UpdateFileUploadRequest: {
        name: string;
        document?: File | Blob;
      };
      PatchFileUploadRequest: {
        name?: string;
        document?: File | Blob;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;

exports[`generateInterface preserves JSON endpoints alongside form/multipart endpoints 1`] = `
"import "@devup-api/fetch";
import type { DevupObject } from "@devup-api/fetch";

declare module "@devup-api/fetch" {
  interface DevupApiServers {
    'openapi.json': never
  }

  interface DevupPostApiStruct {
    'openapi.json': {
      '/users': {
        body: DevupObject<'request', 'openapi.json'>['CreateUserRequest'];
        response?: {};
      };
      createUser: {
        body: DevupObject<'request', 'openapi.json'>['CreateUserRequest'];
        response?: {};
      };
      '/form': {
        body: DevupObject<'request', 'openapi.json'>['SubscribeRequest'];
        response?: {};
      };
      subscribe: {
        body: DevupObject<'request', 'openapi.json'>['SubscribeRequest'];
        response?: {};
      };
      '/form/upload': {
        body: FormData | Record<string, unknown>;
        response?: {};
      };
      upload: {
        body: FormData | Record<string, unknown>;
        response?: {};
      };
    }
  }

  interface DevupRequestComponentStruct {
    'openapi.json': {
      CreateUserRequest: {
        name?: string;
        email?: string;
      };
      SubscribeRequest: {
        name?: string;
        email?: string;
      };
    }
  }

  interface DevupResponseComponentStruct {}

  interface DevupErrorComponentStruct {}
}"
`;
